force-app/main/default/objects/Lead/fields/Created_through_Global_Action__c.field-meta.xml
<CustomField>
    <fullName>Created_through_Global_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created through Global Action</label>
    <type>Checkbox</type>
</CustomField>