force-app/main/default/objects/Lead/fields/Implementation_Period__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Period__c</fullName>
    <label>Implementation Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>short-term</fullName>
                <label>short-term ( &lt; 3 months)</label>
            </value>
            <value>
                <fullName>medium-term</fullName>
                <label>medium-term (4-12 months)</label>
            </value>
            <value>
                <fullName>long-term</fullName>
                <label>long-term (&gt; 12 months)</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other (see comments)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>