force-app/main/default/objects/Lead/fields/Last_duplicate_lead__c.field-meta.xml
<CustomField>
    <fullName>Last_duplicate_lead__c</fullName>
    <label>Last duplicate lead</label>
    <type>DateTime</type>
</CustomField>