force-app/main/default/objects/Lead/fields/Lead_type__c.field-meta.xml
<CustomField>
    <fullName>Lead_type__c</fullName>
    <label>Lead type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Lead_Type</valueSetName>
    </valueSet>
</CustomField>