force-app/main/default/objects/Lead/fields/Opt_in_out__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_out__c</fullName>
    <inlineHelpText>Select whether the lead can be emailed. Opt in = yes can be mailed. Opt out = cannot be emailed.</inlineHelpText>
    <label>Email Opt in / out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt in</fullName>
            </value>
            <value>
                <fullName>Opt out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>