force-app/main/default/objects/Lead/fields/PMC__c.field-meta.xml
<CustomField>
    <fullName>PMC__c</fullName>
    <inlineHelpText>Please check which application is applicable</inlineHelpText>
    <label>PMC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC</valueSetName>
    </valueSet>
</CustomField>