force-app/main/default/objects/Lead/fields/Products_Services__c.field-meta.xml
<CustomField>
    <fullName>Products_Services__c</fullName>
    <inlineHelpText>Choose the product of interest here</inlineHelpText>
    <label>Products&amp;Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dNF 120</fullName>
            </value>
            <value>
                <fullName>dNF 80</fullName>
            </value>
            <value>
                <fullName>dNF 40</fullName>
            </value>
            <value>
                <fullName>UF 150</fullName>
            </value>
            <value>
                <fullName>UF010</fullName>
                <label>UF 010</label>
            </value>
            <value>
                <fullName>MF 500</fullName>
            </value>
            <value>
                <fullName>MF 100</fullName>
            </value>
            <value>
                <fullName>Piloting/Lab services</fullName>
            </value>
            <value>
                <fullName>Membranes autopsy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (see comments)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>