force-app/main/default/objects/Lead/fields/Region_Area__c.field-meta.xml
<CustomField>
    <fullName>Region_Area__c</fullName>
    <label>Region/Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region_Area</valueSetName>
    </valueSet>
</CustomField>