force-app/main/default/objects/Lead/fields/What_are_you_looking_for__c.field-meta.xml
<CustomField>
    <fullName>What_are_you_looking_for__c</fullName>
    <label>What are you looking for?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Advice</fullName>
            </value>
            <value>
                <fullName>Product Information</fullName>
            </value>
            <value>
                <fullName>(Online) Meeting request</fullName>
            </value>
            <value>
                <fullName>Request for Quotation</fullName>
            </value>
            <value>
                <fullName>Marketing Material</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Advice</fullName>
                <isActive>false</isActive>
                <label>Advice</label>
            </value>
            <value>
                <fullName>Info price</fullName>
                <isActive>false</isActive>
                <label>Info Price</label>
            </value>
            <value>
                <fullName>Product info</fullName>
                <isActive>false</isActive>
                <label>Product info</label>
            </value>
            <value>
                <fullName>Quote</fullName>
                <isActive>false</isActive>
                <label>Quote</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>