force-app/main/default/objects/Lead/validationRules/Country_field_needs_to_be_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_field_needs_to_be_populated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
ISBLANK(Country)
)</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Country field needs to be populated on Lead</errorMessage>
</ValidationRule>