force-app/main/default/objects/Lead/validationRules/Prevent_Duplicate_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate_Lead</fullName>
    <active>true</active>
    <description>Validation Rule to prevent duplicate leads coming in from the web to lead form</description>
    <errorConditionFormula>Duplicate_Lead__c = true</errorConditionFormula>
    <errorMessage>A duplicate lead was prevented coming in from the web to load form.</errorMessage>
</ValidationRule>