force-app/main/default/objects/Lead/listViews/All_SIWW2022_leads.listView-meta.xml
<ListView>
    <fullName>All_SIWW2022_leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>PMC__c</columns>
    <columns>Lead_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>SIWW2022</value>
    </filters>
    <label>All SIWW2022 leads</label>
</ListView>