force-app/main/default/objects/Lead/listViews/Americas_Lead.listView-meta.xml
<ListView>
    <fullName>Americas_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Americas</label>
    <queue>Americas</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>