force-app/main/default/objects/Lead/listViews/Benelux_Lead.listView-meta.xml
<ListView>
    <fullName>Benelux_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Benelux</label>
    <queue>Benelux</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>