force-app/main/default/objects/Lead/listViews/India_Lead.listView-meta.xml
<ListView>
    <fullName>India_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>India</label>
    <queue>India</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>