force-app/main/default/objects/Lead/listViews/Lead_Distribution.listView-meta.xml
<ListView>
    <fullName>Lead_Distribution</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Lead Distribution</label>
    <queue>Lead_Distribution</queue>
</ListView>